Misc fixes
- Fix Google Translator API can't output proper Vietnamese characters (just add UTF-8 charset).
- Fix exportToFile option can't export proper Vietnamese characters (just add UTF-8 charset).
- Improve display words table (convert HTML to text and table output to terminal is now beautiful :D).